--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "example-with-tailwindcss",
-  "type": "module",
-  "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start"
-  },
-  "dependencies": {
-    "@solidjs/router": "^0.15.0",
-    "@solidjs/start": "^1.1.0",
-    "@supabase/supabase-js": "^2.49.8",
-    "clsx": "^2.1.1",
-    "solid-js": "^1.9.5",
-    "vinxi": "^0.5.3"
-  },
-  "devDependencies": {
-    "@tailwindcss/vite": "^4.0.7",
-    "tailwindcss": "^4.0.7"
-  },
-  "engines": {
-    "node": ">=22"
-  }
+    "name": "example-with-tailwindcss",
+    "type": "module",
+    "scripts": {
+        "dev": "vinxi dev",
+        "build": "vinxi build",
+        "start": "vinxi start"
+    },
+    "dependencies": {
+        "@solidjs/router": "^0.15.0",
+        "@solidjs/start": "^1.1.0",
+        "@supabase/supabase-js": "^2.49.8",
+        "clsx": "^2.1.1",
+        "pdf2json": "^3.1.6",
+        "solid-js": "^1.9.5",
+        "vinxi": "^0.5.3"
+    },
+    "devDependencies": {
+        "@tailwindcss/vite": "^4.0.7",
+        "tailwindcss": "^4.0.7"
+    },
+    "engines": {
+        "node": ">=22"
+    }
 }
