--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "vinxi start"
     },
     "dependencies": {
+        "@anthropic-ai/sdk": "^0.18.0",
         "@solidjs/router": "^0.15.0",
         "@solidjs/start": "^1.1.0",
         "@supabase/supabase-js": "^2.49.8",
