--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "clsx": "^2.1.1",
         "jsdom": "^26.1.0",
         "node-fetch": "^3.3.2",
+        "node-html-parser": "^7.0.1",
         "pdf2json": "^3.1.6",
         "solid-js": "^1.9.5",
         "vinxi": "^0.5.3"
