--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/jsdom": "^21.1.7",
         "@types/node-fetch": "^2.6.12",
         "clsx": "^2.1.1",
+        "driver.js": "^1.3.6",
         "jsdom": "^26.1.0",
         "node-fetch": "^3.3.2",
         "node-html-parser": "^7.0.1",
