--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "node-html-parser": "^7.0.1",
         "pdf2json": "^3.1.6",
         "solid-js": "^1.9.5",
+        "solid-motionone": "^1.0.4",
         "solid-sonner": "^0.2.8",
         "vinxi": "^0.5.3"
     },
